--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Day_2_Test</title>
 </head>
 <body>
-    <h1>This is a fresh test</h1>
-    <h1>This is a fresh test2</h1>
+    <h1>Hello world!</h1>
+    <p>This is the first file in my new Git Repo.</p>
 </body>
 </html>
